add warika link

--- a/index.html
+++ b/index.html
@@ -1,27 +1,90 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <title>旅行プラン</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>佳奈・和真の韓国旅行</title>
+<link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
-<h1>旅行スケジュール</h1>
+<h1>佳奈・和真の韓国旅行🇰🇷</h1>
+<p class="period">5/1(金)〜5/5(火)</p>
 
-<h2>1日目</h2>
-<ul>
-    <li>11:00 出発</li>
-    <li>12:00 昼食</li>
-    <li>14:00 観光</li>
-</ul>
+<!-- 外部リンクボタン -->
+<div class="link-area">
+<a href="https://walica.jp/group/01KJD2MCHS68FP74AYBAZ7YSXS" target="_blank" class="main-link">
+旅行グループページを開く
+</a>
+</div>
 
-<h2>2日目</h2>
+<!-- 1日目 -->
+<div class="day">
+<h2>5/1(金)</h2>
 <ul>
-    <li>9:00 ホテル出発</li>
-    <li>11:00 お土産</li>
-    <li>15:00 帰宅</li>
+<li>09:15 セントレア出発🛫</li>
+<li>11:20 仁川空港到着🛬</li>
+<li>空港でぶらぶら</li>
+<li>15:00 ホテルチェックイン<br>Hotel Boutique9</li>
+<li>17:00 明洞でご飯・お酒🍻</li>
 </ul>
+</div>
+
+<!-- 2日目 -->
+<div class="day">
+<h2>5/2(土)</h2>
+<ul>
+<li>10:00 プチョンユッケ本店</li>
+<li>11:30 宗廟 / 昌徳宮 / 景福宮</li>
+<li>16:00 明洞実弾射撃場</li>
+<li>18:00 明洞でご飯・お酒🍶</li>
+</ul>
+</div>
+
+<!-- 3日目 -->
+<div class="day">
+<h2>5/3(日)</h2>
+<ul>
+<li>10:00 ホテル出発</li>
+<li>11:30 国立世界文字博物館</li>
+<li>13:30 Hanyang（ブルコギ・ユッケ）</li>
+<li>15:30 仁川上陸作戦記念館</li>
+<li>18:00 仁川中華街</li>
+<li>21:00 ホテル着</li>
+</ul>
+</div>
+
+<!-- 4日目 -->
+<div class="day">
+<h2>5/4(月)</h2>
+<ul>
+<li>13:00 Rafre Fruit（カフェ）</li>
+<li>ソウルの森公園 散歩🌳</li>
+<li>16:00 ヨンチョンヨンファ（ユッケ）</li>
+<li>18:00 パラダイスカジノ🎰</li>
+</ul>
+</div>
+
+<!-- 5日目 -->
+<div class="day">
+<h2>5/5(火)</h2>
+<ul>
+<li>11:00 ホテルチェックアウト</li>
+<li>空港で昼ごはん</li>
+<li>15:05 仁川空港出発🛫</li>
+<li>17:00 セントレア到着🛬</li>
+</ul>
+</div>
+
+<!-- やること -->
+<div class="todo">
+<h2>やること</h2>
+<ul>
+<li>ソウル⇄仁川空港の往復電車チケット予約</li>
+<li>明洞の飲食店を探す</li>
+</ul>
+</div>
 
 </body>
 </html>
