warikaを開くボタン名を変更

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- 外部リンクボタン -->
 <div class="link-area">
 <a href="https://walica.jp/group/01KJD2MCHS68FP74AYBAZ7YSXS" target="_blank" class="main-link">
-旅行グループページを開く
+warikaを開く
 </a>
 </div>
 
