--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@ warikaを開く
 <li>09:15 セントレア出発🛫</li>
 <li>11:20 仁川空港到着🛬</li>
 <li>空港でぶらぶら</li>
+
 <li>
-    15:00 ホテルチェックイン<br>
-    <a href="https://www.google.co.jp/maps/place/%E3%83%9B%E3%83%86%E3%83%AB+%E3%83%96%E3%83%86%E3%82%A3%E3%83%83%E3%82%AF+9/@37.5744672,127.0189739,15z/data=!4m9!3m8!1s0x357cbcb32aa96681:0xf6c1c032e7f3e9d3!5m2!4m1!1i2!8m2!3d37.5764295!4d127.0266071!16s%2Fg%2F11b73r7y2s?entry=ttu&g_ep=EgoyMDI2MDIyMy4wIKXMDSoASAFQAw%3D%3D"
-    target="_blank"
-    class="map-link">
-    📍 Hotel Boutique9
+15:00 ホテルチェックイン<br>
+<a href="https://www.google.com/maps/search/?api=1&query=Hotel+Boutique9" target="_blank">
+📍Hotel Boutique9
 </a>
 </li>
+
 <li>17:00 明洞でご飯・お酒🍻</li>
 </ul>
 </div>
@@ -42,9 +42,28 @@ warikaを開く
 <div class="day">
 <h2>5/2(土)</h2>
 <ul>
-<li>10:00 プチョンユッケ本店</li>
-<li>11:30 宗廟 / 昌徳宮 / 景福宮</li>
-<li>16:00 明洞実弾射撃場</li>
+
+<li>
+10:00 
+<a href="https://www.google.com/maps/search/?api=1&query=プチョンユッケ本店" target="_blank">
+プチョンユッケ本店
+</a>
+</li>
+
+<li>
+11:30 
+<a href="https://www.google.com/maps/search/?api=1&query=宗廟" target="_blank">宗廟</a> /
+<a href="https://www.google.com/maps/search/?api=1&query=昌徳宮" target="_blank">昌徳宮</a> /
+<a href="https://www.google.com/maps/search/?api=1&query=景福宮" target="_blank">景福宮</a>
+</li>
+
+<li>
+16:00 
+<a href="https://www.google.com/maps/search/?api=1&query=明洞実弾射撃場" target="_blank">
+明洞実弾射撃場
+</a>
+</li>
+
 <li>18:00 明洞でご飯・お酒🍶</li>
 </ul>
 </div>
@@ -53,12 +72,39 @@ warikaを開く
 <div class="day">
 <h2>5/3(日)</h2>
 <ul>
+
 <li>10:00 ホテル出発</li>
-<li>11:30 国立世界文字博物館</li>
-<li>13:30 Hanyang（ブルコギ・ユッケ）</li>
-<li>15:30 仁川上陸作戦記念館</li>
-<li>18:00 仁川中華街</li>
+
+<li>
+11:30 
+<a href="https://www.google.com/maps/search/?api=1&query=国立世界文字博物館" target="_blank">
+国立世界文字博物館
+</a>
+</li>
+
+<li>
+13:30 
+<a href="https://www.google.com/maps/search/?api=1&query=Hanyang+Seoul" target="_blank">
+Hanyang（ブルコギ・ユッケ）
+</a>
+</li>
+
+<li>
+15:30 
+<a href="https://www.google.com/maps/search/?api=1&query=仁川上陸作戦記念館" target="_blank">
+仁川上陸作戦記念館
+</a>
+</li>
+
+<li>
+18:00 
+<a href="https://www.google.com/maps/search/?api=1&query=仁川中華街" target="_blank">
+仁川中華街
+</a>
+</li>
+
 <li>21:00 ホテル着</li>
+
 </ul>
 </div>
 
@@ -66,10 +112,35 @@ warikaを開く
 <div class="day">
 <h2>5/4(月)</h2>
 <ul>
-<li>13:00 Rafre Fruit（カフェ）</li>
-<li>ソウルの森公園 散歩🌳</li>
-<li>16:00 ヨンチョンヨンファ（ユッケ）</li>
-<li>18:00 パラダイスカジノ🎰</li>
+
+<li>
+13:00 
+<a href="https://www.google.com/maps/search/?api=1&query=Rafre+Fruit+Seoul" target="_blank">
+Rafre Fruit（カフェ）
+</a>
+</li>
+
+<li>
+<a href="https://www.google.com/maps/search/?api=1&query=ソウルの森公園" target="_blank">
+ソウルの森公園
+</a>
+ 散歩🌳
+</li>
+
+<li>
+16:00 
+<a href="https://www.google.com/maps/search/?api=1&query=ヨンチョンヨンファ" target="_blank">
+ヨンチョンヨンファ（ユッケ）
+</a>
+</li>
+
+<li>
+18:00 
+<a href="https://www.google.com/maps/search/?api=1&query=パラダイスカジノ仁川" target="_blank">
+パラダイスカジノ🎰
+</a>
+</li>
+
 </ul>
 </div>
 
