--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ warikaを開く
 <li>
 11:30 
 <a href="https://www.google.com/maps/place/%E5%AE%97%E5%BB%9F/@37.5746313,126.9938158,17z/data=!3m1!4b1!4m6!3m5!1s0x357ca2d85a1cbacf:0x24dfda0247e6e153!8m2!3d37.5746313!4d126.9938158!16s%2Fg%2F11b77jgfzf!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">宗廟</a> /
-<a href="https://www.google.com/maps/place/%E6%98%8C%E5%BE%B3%E5%AE%AE/@37.5794309,126.9910426,17z/data=!3m1!4b1!4m6!3m5!1s0x357ca25bce7408e3:0xff296b97da565068!8m2!3d37.5794309!4d126.9910426!16s%2Fg%2F11b7gr9kq4!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">昌徳宮</a> /
+<a href="https://www.google.com/maps?q=%E6%98%8C%E5%BE%B3%E5%AE%AE+%EF%BC%99%EF%BC%99+Yulgok-ro,+Jongno+District,+Seoul,+%E9%9F%93%E5%9B%BD&ftid=0x357ca25bce7408e3:0xff296b97da565068&entry=gps&shh=CAE&lucs=,94297699,94284472,94231188,94280568,47071704,94218641,94282134,94286869&g_ep=CAISEjI2LjA3LjIuODY3NTgxNDQ4MBgAIIgnKkgsOTQyOTc2OTksOTQyODQ0NzIsOTQyMzExODgsOTQyODA1NjgsNDcwNzE3MDQsOTQyMTg2NDEsOTQyODIxMzQsOTQyODY4NjlCAkpQ&skid=d0fbce8a-1bad-4463-8ee1-273547926f83&g_st=il" target="_blank">昌徳宮</a> /
 <a href="https://www.google.com/maps/place/%E6%99%AF%E7%A6%8F%E5%AE%AE/@37.579617,126.977041,17z/data=!3m1!4b1!4m6!3m5!1s0x357ca2c74aeddea1:0x8b3046532cc715f6!8m2!3d37.579617!4d126.977041!16zL20vMDJ2M3Q2!18m1!1e1?entry=ttu&g_ep=EgoyMDI2MDIyMy4wIKXMDSoASAFQAw%3D%3D" target="_blank">景福宮</a>
 </li>
 
